orchestration/demo/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  namespace: default
  labels:
    app: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: demo
          image: asia.gcr.io/core-287413/demo:latest
          ports:
            - name: http
              containerPort: 3000
          resources:
            limits:
              cpu: 300m
              memory: 500Mi
            requests:
              cpu: 30m
              memory: 150Mi
