orchestration/demo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: demo
  labels:
    app: demo
spec:
  type: ClusterIP
  selector:
    app: demo
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
